# compiler

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
cli/: bery_cli.cpp
cli/commands/: cmd_compile.cpp
examples/: testAdditive.bry  testArray.bry  testBool.bry  testChar.bry  testComments.bry  testDouble.bry  testMultiplicative.bry  testNegativeValues.bry  testNull.bry  testShift.bry  testUnaryExpr.bry
examples/arrays/: test2Darray.bry  testArray.bry
examples/bre/: print.bry  testAll.bry  testArrStr.bry  testGC.bry  testString.bry
examples/classes/: class1  class1.bry  objects  objects.bry  simpleClass.bry
examples/components/: testErrors.bry
examples/controlflow/: testContinue.bry  testDoWhile.bry  testForIn.bry  testIf.bry  testPass.bry  testSwitch.bry  testfor.bry
examples/datatypes/: testCasting.bry
examples/expressions/: testAssignment.bry  testBitwise.bry  testComplex.bry  testIndexing.bry  testRelational.bry
examples/functions/: testNormalFunc.bry  testParams.bry  testVoid.bry
examples/imports/: testImport.bry  testModule.bry
src/: main.cpp
src/bre/include/: bery_alloc.h  bery_array.h  bery_core_api.h  bery_gc.h  bery_gc_roots.h  bery_native.h  bery_object.h  bery_runtime.h  bery_type_registry.h
src/bre/src/: bery_alloc.cpp  bery_array.cpp  bery_gc_roots.cpp  bery_native.cpp  bery_runtime.cpp  bery_type_registry.cpp
src/codegen/: codegen.cpp  codegen.h
src/codegen/irgen/: bre.cpp  controlflow.cpp  declarations.cpp  expressions.cpp  gc.cpp  helpers.cpp
src/common/: toolchain.h  version.h
src/importer/: importer.cpp  importer.h  mangler.cpp  mangler.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h  parser_conditional.cpp  parser_controlflow.cpp  parser_errors.cpp  parser_expression.cpp  parser_functions.cpp  parser_loops.cpp  parser_oop.cpp  parser_statements.cpp
src/parser/ast/: accessSpecifier.h  arraydeclare.h  blocknode.h  classdeclare.h  classes.h  controlflow.h  expressions.h  functions.h  importer.h  literals.h  node.h  programnode.h  vardecl.h
src/sema/: sema.cpp  sema.h  sema_controlflow.cpp  sema_declarations.cpp  symboltable.cpp  symboltable.h  typechecker.cpp  typechecker.h
src/stdlib/: _core.bry  io.bry
